# lafferty-etal-2024-tbd

./: .gitignore  README.md  pyproject.toml
code/: 00_data_processing.ipynb  00a_data_processing.ipynb  00a_download_oakridge.sh  00b_data_preparation.ipynb  00b_nonclimate_proj_inputs.ipynb  00b_projection_inputs.ipynb  01_WBM_SA.ipynb  01_initial_sa.ipynb  01_obs_hind_runs.ipynb  01_obs_runs.ipynb  01_run_WBM.ipynb  01_sensitivity_analysis.ipynb  02_WBM_precalibration.ipynb  02_calculate_metrics.ipynb  02_climate_analysis.ipynb  02a_WBM_calibration.ipynb  02a_WBM_precalibration.ipynb  02a_WBM_precalibration_runs.ipynb  02a_calibration.ipynb  02b_WBM_calibration_plots.ipynb  02b_WBM_precalibration_plots.ipynb  02b_calibration_plots.ipynb  03_projections.ipynb  03_sensitivity_analysis.ipynb  04_forward_sa.ipynb  04_plots.ipynb  04a_forward_sa.ipynb  04b_forward_sa_plots.ipynb  99_GeoData_processing.ipynb  99_SA.ipynb  99_SMAP_processing.ipynb  99_WBM_paramater_UC.ipynb  99_WBM_paramater_UC_OLD.ipynb  99_WBM_precalibration.ipynb  99_WBM_precalibration_OLD.ipynb  99_download_oakridge.sh  99_jax_test.ipynb  99_misc_plots.ipynb  99_plots.ipynb  99_testing.ipynb  (+17 more)
scripts/: 00a_data_processing.ipynb  00b_data_preparation.ipynb  02a_calibration.ipynb  02b_calibration_plots.ipynb  03_projections.ipynb  04a_forward_sa.ipynb  99_format_outputs.ipynb  99_misc_plots.ipynb
src/: data_processing.py  read_inputs.py  sobol_sa.py  train.py
utils/: climate_drivers.csv  get_climate_drivers.py  wbm_init_template.json
wbm_storage_template/: check_run_WBM.pbs  run_WBM.pbs  spool_WBM.pbs  (+2 more)
(+82 files in other folders)
