[project]
name = "wbm-soilm-uc-2024"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dask>=2024.12.0",
    "datetime>=5.5",
    "jax>=0.4.37",
    "jupyterlab>=4.3.3",
    "matplotlib>=3.10.0",
    "nc-time-axis>=1.4.1",
    "numpy>=2.2.0",
    "optax>=0.2.4",
    "pandas>=2.2.3",
    "regionmask>=0.13.0",
    "salib>=1.5.1",
    "xarray>=2024.11.0",
    "zarr>=2.18.4",
]
